Move factorizing from predictor file into data_prep file

--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "df = pd.read_csv('data/combined_data_laliga.csv', sep=',')"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "df = df.drop('Index', axis=1)"
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "    Home Team      Away Team Score Half Time Score  Match Excitement  \\\n0      MÁLAGA       ATHLETIC   1-0             1-0               4.4   \n1  SEVILLA FC       VALENCIA   1-1             1-0               4.7   \n2     GRANADA      DEPORTIVO   2-1             0-1               4.6   \n3     ALMERÍA       ESPANYOL   1-1             0-0               5.6   \n4       EIBAR  REAL SOCIEDAD   1-0             1-0               3.7   \n\n   Home Team Rating  Away Team Rating  Home Team Possession %  \\\n0               6.0               5.7                      40   \n1               6.5               6.8                      47   \n2               7.2               5.9                      53   \n3               6.9               5.5                      56   \n4               6.5               5.9                      41   \n\n   Away Team Possession %  Home Team Off Target Shots  ...  \\\n0                      60                         5.0  ...   \n1                      53                         4.0  ...   \n2                      47                         6.0  ...   \n3                      44                         7.0  ...   \n4                      59                         5.0  ...   \n\n   Away Team Clearances  Away Team Fouls  Away Team Yellow Cards  \\\n0                  14.0              9.0                     3.0   \n1                  16.0              8.0                     2.0   \n2                  14.0             26.0                     3.0   \n3                  20.0              9.0                     3.0   \n4                  20.0             14.0                     1.0   \n\n   Away Team Second Yellow Cards  Away Team Red Cards  Home Team Goals Scored  \\\n0                            0.0                  0.0                       1   \n1                            0.0                  1.0                       1   \n2                            0.0                  0.0                       2   \n3                            1.0                  0.0                       1   \n4                            0.0                  0.0                       1   \n\n   Away Team Goals Scored  Home Team Goals Conceeded  \\\n0                       0                          0   \n1                       1                          1   \n2                       1                          1   \n3                       1                          1   \n4                       0                          0   \n\n   Away Team Goals Conceeded  year  \n0                          1  2014  \n1                          1  2014  \n2                          2  2014  \n3                          1  2014  \n4                          1  2014  \n\n[5 rows x 40 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Home Team</th>\n      <th>Away Team</th>\n      <th>Score</th>\n      <th>Half Time Score</th>\n      <th>Match Excitement</th>\n      <th>Home Team Rating</th>\n      <th>Away Team Rating</th>\n      <th>Home Team Possession %</th>\n      <th>Away Team Possession %</th>\n      <th>Home Team Off Target Shots</th>\n      <th>...</th>\n      <th>Away Team Clearances</th>\n      <th>Away Team Fouls</th>\n      <th>Away Team Yellow Cards</th>\n      <th>Away Team Second Yellow Cards</th>\n      <th>Away Team Red Cards</th>\n      <th>Home Team Goals Scored</th>\n      <th>Away Team Goals Scored</th>\n      <th>Home Team Goals Conceeded</th>\n      <th>Away Team Goals Conceeded</th>\n      <th>year</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>MÁLAGA</td>\n      <td>ATHLETIC</td>\n      <td>1-0</td>\n      <td>1-0</td>\n      <td>4.4</td>\n      <td>6.0</td>\n      <td>5.7</td>\n      <td>40</td>\n      <td>60</td>\n      <td>5.0</td>\n      <td>...</td>\n      <td>14.0</td>\n      <td>9.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2014</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>SEVILLA FC</td>\n      <td>VALENCIA</td>\n      <td>1-1</td>\n      <td>1-0</td>\n      <td>4.7</td>\n      <td>6.5</td>\n      <td>6.8</td>\n      <td>47</td>\n      <td>53</td>\n      <td>4.0</td>\n      <td>...</td>\n      <td>16.0</td>\n      <td>8.0</td>\n      <td>2.0</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2014</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>GRANADA</td>\n      <td>DEPORTIVO</td>\n      <td>2-1</td>\n      <td>0-1</td>\n      <td>4.6</td>\n      <td>7.2</td>\n      <td>5.9</td>\n      <td>53</td>\n      <td>47</td>\n      <td>6.0</td>\n      <td>...</td>\n      <td>14.0</td>\n      <td>26.0</td>\n      <td>3.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2</td>\n      <td>2014</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>ALMERÍA</td>\n      <td>ESPANYOL</td>\n      <td>1-1</td>\n      <td>0-0</td>\n      <td>5.6</td>\n      <td>6.9</td>\n      <td>5.5</td>\n      <td>56</td>\n      <td>44</td>\n      <td>7.0</td>\n      <td>...</td>\n      <td>20.0</td>\n      <td>9.0</td>\n      <td>3.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>2014</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>EIBAR</td>\n      <td>REAL SOCIEDAD</td>\n      <td>1-0</td>\n      <td>1-0</td>\n      <td>3.7</td>\n      <td>6.5</td>\n      <td>5.9</td>\n      <td>41</td>\n      <td>59</td>\n      <td>5.0</td>\n      <td>...</td>\n      <td>20.0</td>\n      <td>14.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2014</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 40 columns</p>\n</div>"
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "ftr = []\n",
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Delete stats that are beyond normal match stats and year of the match which in non-relevant\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# Drop team names, teams wont be taken into account, just stats\n",
@@ -374,7 +374,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "#Factorizing Full Time Result column so it can be fit into machine learning algorithms\n",
+    "df['Full Time Result'] = pd.factorize(df['Full Time Result'])[0]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Factorizing result:\n",
+    "Home win = 0\n",
+    "Draw = 1\n",
+    "Away win = 2"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "df.to_csv('data/final_data.csv')"
